components/swipers/HeroSwiper.css
/* HeroSwiper.css */

.swiper-wrapper-container {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 500px; 
  width: 100%;
}

.mySwiper {
  width: 280px; 
  height: 450px;
}

.swiper-slide {
  position: relative;
  box-shadow: 0 15px 50px rgba(0, 0, 0, 0.4);
  border-radius: 10px;
  user-select: none;
  overflow: hidden;
  background: #000;
}

.swiper-slide img {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.img-position {
  object-position: 50% 0%;
}

.overlay {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to top, rgba(15, 32, 39, 0.9), transparent, transparent);
}

.overlay span {
  position: absolute;
  top: 0;
  right: 0;
  color: #fff;
  padding: 7px 18px;
  margin: 10px;
  border-radius: 20px;
  letter-spacing: 2px;
  font-size: 0.8rem;
  font-weight: 700;
  background: rgba(255, 255, 255, 0.1);
  box-shadow: inset 2px -2px 20px rgba(214, 214, 214, 0.2),
    inset -3px 3px 3px rgba(255, 255, 255, 0.4);
  backdrop-filter: blur(10px);
}

.overlay h2 {
  position: absolute;
  bottom: 0;
  left: 0;
  color: #fff;
  font-weight: 500;
  font-size: 1.2rem;
  line-height: 1.4;
  margin: 0 0 20px 20px;
  text-shadow: 0 2px 4px rgba(0,0,0,0.5);
}

